hphp/test/slow/magic-methods/isset.php.expectf
Fatal error: Magic `__isset` methods are no longer supported in %s/isset.php on line 4
